<resources>
    <string name="app_name">HijaiyahKu_New</string>
    <string name="ayo_kita_me">Ayo Kita\nMerangkai!</string>
    <string name="ayo_pilih_soalnya">Ayo Pilih Soalnya!</string>
    <string name="soal">Soal</string>
    <string name="petunjuk">Petunjuk</string>
    <string name="rangkailah_huruf_hijaiyah_sesuai_soal">Rangkailah huruf hijaiyah sesuai soal!</string>
    <string name="saya_mengerti">Saya Mengerti</string>
    <string name="kamera">kamera</string>
    <string name="galeri">Galeri</string>
    <string name="yey_kamu_berhasil">Yey, Kamu Berhasil</string>
    <string name="yuk_lanjut_ke_soal_berikutnya">Yuk lanjut ke soal berikutnya</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="jawaban_kamu_kurang_tepat">Jawaban kamu kurang tepat</string>
    <string name="yuk_dicoba_lagi">Yuk dicoba lagi</string>
    <string name="ulangi">Ulangi</string>
    <string name="huruf_nsambung">Huruf \nSambung</string>
    <string name="huruf_pisah">Huruf Pisah</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="petunjuk_sambung">Jenis soal sambung berarti kamu akan diberikan kata dengan rangkaian huruf hijaiyah sambung, dan kamu harus merangkai kata tersebut</string>
    <string name="petunjuk_pisah">Jenis soal pisah berarti kamu akan diberikan kata dengan rangkaian huruf hijaiyah pisah, dan kamu harus merangkai kata tersebut</string>
    <string name="silahkan_pilih_jenis_soal_kamu_yaaa">Silahkan pilih jenis soal kamu yaaa.</string>
</resources>