<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/layer4"
    android:orientation="vertical">

    <!-- Add your custom dialog content here -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="145dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:background="@drawable/child3" />
        <View
            android:layout_width="145dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:background="@drawable/child5" />
    </LinearLayout>


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/yey_kamu_berhasil" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/yuk_lanjut_ke_soal_berikutnya" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="10dp"
        android:text="@string/lanjutkan"
        android:textColor="@color/black" />

</LinearLayout>